[project]
name = "codereviewer-testcasegenerator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "groq>=1.4.0",
    "langchain>=1.3.10",
    "langchain-core>=1.4.8",
    "langgraph>=1.2.6",
    "pydantic>=2.13.4",
    "pytest>=9.1.1", #optional for running generated tests
    "python-dotenv>=1.2.2",
]
